crates/dag-macros/tests/ui/flow_enum_not_enum.rs
use dag_macros::flow_enum;

#[flow_enum]
struct NotAnEnum {
    value: i32,
}

fn main() {}
